計算式の記述

--- a/app/views/calculations/new.html.erb
+++ b/app/views/calculations/new.html.erb
@@ -1,7 +1,7 @@
 <h1>ポケモン素早さ実数値計算</h1>
 
 <div class="form-group new-form">
-  <%= form_with model: @calculatin, class: 'new-request', local: true do |f| %>
+  <%= form_with model: @calculation, url: calculations_path ,class: 'new-request', local: true do |f| %>
 
     <div class="new-input">
       <div class="calculation-poke">
